# functional-programming

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs
backend/src/routes/: watermark.rs
backend/src/services/: watermark_service.rs
backend/src/utils/: image_ops.rs
frontend/src/: App.vue
