[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
image = "0.24"
rayon = "1.8"
zip = "0.6"
uuid = { version = "1.0", features = ["v4", "serde"] }
multer = "2.1"